--- a/Dockerfile.pipelight
+++ b/Dockerfile.pipelight
@@ -16,7 +16,7 @@ WORKDIR /pipelight-multi-0.2.8.2~ubuntu16.04.1
 RUN mk-build-deps -B
 RUN DEBIAN_FRONTEND=noninteractive apt-get install --yes ./pipelight-multi-build-deps-depends_0.2.8.2~ubuntu16.04.1_all.deb
 # Configure with win64 support and make.
-RUN ./configure --wine-path=/opt/wine-staging/bin/wine --with-win64 --win64-cxx=x86_64-w64-mingw32-g++ --win64-flags="-static-libgcc -static-libstdc++ -static" --wine64-path=/opt/wine-staging/bin/wine64
+RUN ./configure --wine-path=/opt/wine-staging/bin/wine --with-win64 --win64-cxx=x86_64-w64-mingw32-g++ --win64-flags="-static-libgcc -static-libstdc++ -static" --wine64-path=/opt/wine-staging/bin/wine64 --debug
 RUN make
 # Package as deb.
 RUN checkinstall -D --install=no --nodoc -y --pkgname=pipelight-multi --pkglicense=GPL2 --pkgversion=0.2.8.2 --pkgsource="http://ppa.launchpad.net/pipelight/stable/ubuntu/pool/main/p/pipelight-multi/" --requires="libc6 \(\>= 2.14\),libgcc1 \(\>= 1:3.0\),libstdc++6 \(\>= 5.2\),libx11-6,debconf \(\>= 0.5\) \| debconf-2.0,mesa-utils,ttf-mscorefonts-installer,wget,zenity \| kde-baseapps-bin,zenity \| qdbus,wine-staging,bash \(\>= 4.0\),unzip,cabextract,gnupg" --arch=amd64
