--- a/Dockerfile.pipelight
+++ b/Dockerfile.pipelight
@@ -33,4 +33,4 @@ RUN rm pipelight-multi_0.2.8.2-1_amd64.deb
 RUN mkdir -p /usr/lib/mozilla/plugins
 RUN pipelight-plugin --create-mozilla-plugins
 # Cleanup unneeded packages.
-RUN apt-get autoremove
+RUN DEBIAN_FRONTEND=noninteractive apt-get autoremove --yes
