--- a/Dockerfile.flash32_0r0_330
+++ b/Dockerfile.flash32_0r0_330
@@ -6,7 +6,7 @@
 FROM fpdocker-basilisk:latest
 
 # Install dependencies
-RUN apt-get install --yes libnss3 libgtk2.0-0
+RUN apt-get install --yes libnss3 libgtk2.0-0 libcurl4 libcanberra-pulse
 
 # May be overriden at build-time if you want a slightly different version.
 # If you do that, tag it differently.
