Un-ignore flash tests and add readme.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 # Ignore my debug log directory.
 debuglogs
-# Ignore UnityTest, FlashTest, etc dirs.
-*Test
+# Ignore UnityTest, as it's simply too big.
+UnityTest
