--- a/dockerfiles/Dockerfile.wine
+++ b/dockerfiles/Dockerfile.wine
@@ -16,4 +16,4 @@ RUN wget -qO- https://dl.winehq.org/wine-builds/winehq.key | apt-key add -
 RUN echo 'deb https://dl.winehq.org/wine-builds/ubuntu/ focal main' > /etc/apt/sources.list.d/wine.list
 # Update the package lists, and install wine.
 RUN apt-get update
-RUN DEBIAN_FRONTEND=noninteractive apt-get install --yes winehq-staging
+RUN apt-get install --yes winehq-staging
