Add built wine packages, so people don't have to rebuild them.
Former-commit-id: 05eb5f146ccad7143d8c4e7e1a245947f2ebaade

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ debuglogs
 # Ignore the local UnityTest files, as they're simply too big.
 UnityTest/*.html
 UnityTest/*.unity3d
-*.deb
+# Don't ignore debs, we don't want to force everyone to rebuild wine.
+#*.deb
