Update TODO, auto-enable plugins.

--- a/earthfiles/config/flashpoint.cfg
+++ b/earthfiles/config/flashpoint.cfg
@@ -8,3 +8,7 @@ defaultPref("browser.startup.homepage_override.mstone", "ignore");
 defaultPref("browser.startup.firstrunSkipsHomepage", true);
 defaultPref("trailhead.firstrun.branches", "nofirstrun-empty");
 defaultPref("browser.aboutwelcome.enabled", false);
+
+// Auto-enable our extensions.
+// Figured out how to do this, despite people like this guy: https://discourse.mozilla.org/t/5242/2
+defaultPref("plugin.state.libpipelight-unity3d", 2);
